feat: add html structure

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,148 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
+    <title>Smile-tech</title>
   </head>
   <body>
-    <h1>Test</h1>
+    <main class="main">
+      <section class="section steps">
+        <h1 class="section__title steps__title">5 шагов к вашему карьерному развитию</h1>
+        <ul class="steps__list">
+          <li class="steps__list-item">
+            <span class="steps__number">1</span>
+            <p class="steps__text">
+              Запишитесь на обучение и подтвердите заявку на портале «Работа в России» до 15 мая
+            </p>
+          </li>
+          <li class="steps__list-item">
+            <span class="steps__number">2</span>
+            <p class="steps__text">
+              Зарегистрируйтесь в Личном кабинете гражданина и загрузите в него документы в течение
+              3 дней после подтверждения заявки
+            </p>
+          </li>
+          <li class="steps__list-item">
+            <span class="steps__number">3</span>
+            <p class="steps__text">
+              Подайте документы, подтверждающие категорию участника, в Центр занятости населения в
+              течение 3 рабочих дней после подтверждения заявки
+            </p>
+          </li>
+          <li class="steps__list-item">
+            <span class="steps__number">4</span>
+            <p class="steps__text">
+              Выберите один из двух типов договора и желаемую дату обучения. Успейте в ближайшие
+              потоки: 16 и 23 мая
+            </p>
+          </li>
+          <li class="steps__list-item">
+            <span class="steps__number">5</span>
+            <p class="steps__text">
+              Отправьте оригинал договора в образовательную организацию до стартаобразовательных
+              групп
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section
+        class="section questions"
+        id="themes">
+        <h2 class="section__title questions__title">Остались вопросы?</h2>
+        <p class="questions__text">Выберите тему, по которой возник вопрос</p>
+        <ul class="questions__list">
+          <li class="questions__list-item">
+            <svg class="questions__icon"></svg>
+            <p class="questions__list-text">Подача заявки</p>
+          </li>
+          <li class="questions__list-item">
+            <svg class="questions__icon"></svg>
+            <p class="questions__list-text">Требования к участникам</p>
+          </li>
+          <li class="questions__list-item">
+            <svg class="questions__icon"></svg>
+            <p class="questions__list-text">Информация о проекте</p>
+          </li>
+          <li class="questions__list-item">
+            <svg class="questions__icon"></svg>
+            <p class="questions__list-text">Обучение</p>
+          </li>
+          <li class="questions__list-item">
+            <svg class="questions__icon"></svg>
+            <p class="questions__list-text">Трудоустройство</p>
+          </li>
+          <li class="questions__list-item">
+            <svg class="questions__icon"></svg>
+            <p class="questions__list-text">Сотрудничество</p>
+          </li>
+        </ul>
+        <article class="questions-info">
+          <h3 class="questions__subtile">Подача заявки</h3>
+          <ul class="questions-info__list">
+            <li class="questions-info__list-item">
+              <h4 class="questions-info__title">Как подтвердить заявку на участие в Проекте?</h4>
+              <svg class="questions-info__icon"></svg>
+              <ul class="questions-info__sublist">
+                <li class="questions-info__sublist-item">
+                  После того, как вы заполните анкету на нашем сайте, ваш браузер автоматически
+                  откроет сайт «Работа в России» или же ссылка придет на почту, которую вы указали в
+                  заявке
+                </li>
+                <li class="questions-info__sublist-item">
+                  Чтобы подтвердить свою личность и заявку на выбранную программу, вам нужно
+                  авторизоваться на сайте «Работа в России». Вход осуществляется через вашу учетную
+                  запись на портале Госуслуг. Вам необходимо иметь статус «Подтвержденной» учетной
+                  записи. Здесь вы можете посмотреть подробную инструкцию
+                </li>
+              </ul>
+            </li>
+            <li class="questions-info__list-item">
+              <h4 class="questions-info__title">Сколько по времени ждать ответа на заявку?</h4>
+              <svg class="questions-info__icon"></svg>
+              <ul class="questions-info__sublist">
+                <li class="questions-info__sublist-item">
+                  Максимальный срок ответа на заявку — 15 рабочих дней.
+                </li>
+              </ul>
+            </li>
+            <li class="questions-info__list-item">
+              <h4 class="questions-info__title">
+                Не могу отправить заявку на портале «Работа в России». Что делать?
+              </h4>
+              <svg class="questions-info__icon"></svg>
+              <ul class="questions-info__sublist">
+                <li class="questions-info__sublist-item">
+                  К сожалению, на портале «Работа в России» иногда происходят технические неполадки.
+                  Мы не можем на это повлиять, попробуйте подтвердить заявку через некоторое время.
+                </li>
+              </ul>
+            </li>
+            <li class="questions-info__list-item">
+              <h4 class="questions-info__title">
+                Не могу дозвониться по телефону, указанному на сайте. Что делать?
+              </h4>
+              <svg class="questions-info__icon"></svg>
+              <ul class="questions-info__sublist">
+                <li class="questions-info__sublist-item">
+                  В данный момент у нас большая нагрузка на телефон горячей линии, поэтому не все
+                  могут получить ответ по телефону. Если у вас не получилось дозвониться, вы всегда
+                  можете написать интересующий вопрос нам на почту — info@tgu-dpo.ru.
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </article>
+        <a
+          href="#themes"
+          class="questions__button">
+          Выбрать другую тему
+        </a>
+      </section>
+    </main>
   </body>
 </html>
