feat: add svg icon on html

--- a/src/index.html
+++ b/src/index.html
@@ -57,28 +57,40 @@
         <h2 class="section__title questions__title">Остались вопросы?</h2>
         <p class="questions__text">Выберите тему, по которой возник вопрос</p>
         <ul class="questions__list">
-          <li class="questions__list-item">
-            <svg class="questions__icon"></svg>
+          <li class="questions__list-item questions__list-item_active">
+            <svg class="questions__icon">
+              <use xlink:href="#document-icon"></use>
+            </svg>
             <p class="questions__list-text">Подача заявки</p>
           </li>
           <li class="questions__list-item">
-            <svg class="questions__icon"></svg>
+            <svg class="questions__icon">
+              <use xlink:href="#people-icon"></use>
+            </svg>
             <p class="questions__list-text">Требования к участникам</p>
           </li>
           <li class="questions__list-item">
-            <svg class="questions__icon"></svg>
+            <svg class="questions__icon">
+              <use xlink:href="#info-icon"></use>
+            </svg>
             <p class="questions__list-text">Информация о проекте</p>
           </li>
           <li class="questions__list-item">
-            <svg class="questions__icon"></svg>
+            <svg class="questions__icon">
+              <use xlink:href="#building-icon"></use>
+            </svg>
             <p class="questions__list-text">Обучение</p>
           </li>
           <li class="questions__list-item">
-            <svg class="questions__icon"></svg>
+            <svg class="questions__icon">
+              <use xlink:href="#contract-icon"></use>
+            </svg>
             <p class="questions__list-text">Трудоустройство</p>
           </li>
           <li class="questions__list-item">
-            <svg class="questions__icon"></svg>
+            <svg class="questions__icon">
+              <use xlink:href="#hands-icon"></use>
+            </svg>
             <p class="questions__list-text">Сотрудничество</p>
           </li>
         </ul>
