style: add style for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -95,58 +95,68 @@
           </li>
         </ul>
         <article class="questions-info">
-          <h3 class="questions__subtile">Подача заявки</h3>
+          <h3 class="questions__subtitle">Подача заявки</h3>
           <ul class="questions-info__list">
             <li class="questions-info__list-item">
               <h4 class="questions-info__title">Как подтвердить заявку на участие в Проекте?</h4>
-              <svg class="questions-info__icon"></svg>
-              <ul class="questions-info__sublist">
-                <li class="questions-info__sublist-item">
-                  После того, как вы заполните анкету на нашем сайте, ваш браузер автоматически
-                  откроет сайт «Работа в России» или же ссылка придет на почту, которую вы указали в
-                  заявке
-                </li>
-                <li class="questions-info__sublist-item">
-                  Чтобы подтвердить свою личность и заявку на выбранную программу, вам нужно
-                  авторизоваться на сайте «Работа в России». Вход осуществляется через вашу учетную
-                  запись на портале Госуслуг. Вам необходимо иметь статус «Подтвержденной» учетной
-                  записи. Здесь вы можете посмотреть подробную инструкцию
-                </li>
-              </ul>
+              <svg class="questions-info__icon">
+                <use xlink:href="#arrow-icon"></use>
+              </svg>
+              <div class="questions-info__text">
+                <ul class="questions-info__sublist">
+                  <li class="questions-info__sublist-item">
+                    После того, как вы заполните анкету на нашем сайте, ваш браузер автоматически
+                    откроет сайт «Работа в России» или же ссылка придет на почту, которую вы указали
+                    в заявке
+                  </li>
+                  <li class="questions-info__sublist-item">
+                    Чтобы подтвердить свою личность и заявку на выбранную программу, вам нужно
+                    авторизоваться на сайте «Работа в России». Вход осуществляется через вашу
+                    учетную запись на портале Госуслуг. Вам необходимо иметь статус «Подтвержденной»
+                    учетной записи. Здесь вы можете посмотреть подробную инструкцию
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="questions-info__list-item">
               <h4 class="questions-info__title">Сколько по времени ждать ответа на заявку?</h4>
-              <svg class="questions-info__icon"></svg>
-              <ul class="questions-info__sublist">
-                <li class="questions-info__sublist-item">
-                  Максимальный срок ответа на заявку — 15 рабочих дней.
-                </li>
-              </ul>
+              <svg class="questions-info__icon">
+                <use xlink:href="#arrow-icon"></use>
+              </svg>
+              <div class="questions-info__text">
+                Максимальный срок ответа на заявку — 15 рабочих дней.
+              </div>
             </li>
             <li class="questions-info__list-item">
               <h4 class="questions-info__title">
                 Не могу отправить заявку на портале «Работа в России». Что делать?
               </h4>
-              <svg class="questions-info__icon"></svg>
-              <ul class="questions-info__sublist">
-                <li class="questions-info__sublist-item">
-                  К сожалению, на портале «Работа в России» иногда происходят технические неполадки.
-                  Мы не можем на это повлиять, попробуйте подтвердить заявку через некоторое время.
-                </li>
-              </ul>
+              <svg class="questions-info__icon">
+                <use xlink:href="#arrow-icon"></use>
+              </svg>
+              <div class="questions-info__text">
+                К сожалению, на портале «Работа в России» иногда происходят технические неполадки.
+                Мы не можем на это повлиять, попробуйте подтвердить заявку через некоторое время.
+              </div>
             </li>
             <li class="questions-info__list-item">
               <h4 class="questions-info__title">
                 Не могу дозвониться по телефону, указанному на сайте. Что делать?
               </h4>
-              <svg class="questions-info__icon"></svg>
-              <ul class="questions-info__sublist">
-                <li class="questions-info__sublist-item">
-                  В данный момент у нас большая нагрузка на телефон горячей линии, поэтому не все
-                  могут получить ответ по телефону. Если у вас не получилось дозвониться, вы всегда
-                  можете написать интересующий вопрос нам на почту — info@tgu-dpo.ru.
-                </li>
-              </ul>
+              <svg class="questions-info__icon">
+                <use xlink:href="#arrow-icon"></use>
+              </svg>
+              <div class="questions-info__text">
+                В данный момент у нас большая нагрузка на телефон горячей линии, поэтому не все
+                могут получить ответ по телефону. Если у вас не получилось дозвониться, вы всегда
+                можете написать интересующий вопрос нам на почту —
+                <a
+                  href="mailto:info@tgu-dpo.ru"
+                  class="questions__link"
+                  >info@tgu-dpo.ru</a
+                >
+                .
+              </div>
             </li>
           </ul>
         </article>
