--- a/src/index.html
+++ b/src/index.html
@@ -56,44 +56,46 @@
         id="themes">
         <h2 class="section__title questions__title">Остались вопросы?</h2>
         <p class="questions__text">Выберите тему, по которой возник вопрос</p>
-        <ul class="questions__list">
-          <li class="questions__list-item questions__list-item_active">
-            <svg class="questions__icon">
-              <use xlink:href="#document-icon"></use>
-            </svg>
-            <p class="questions__list-text">Подача заявки</p>
-          </li>
-          <li class="questions__list-item">
-            <svg class="questions__icon">
-              <use xlink:href="#people-icon"></use>
-            </svg>
-            <p class="questions__list-text">Требования к участникам</p>
-          </li>
-          <li class="questions__list-item">
-            <svg class="questions__icon">
-              <use xlink:href="#info-icon"></use>
-            </svg>
-            <p class="questions__list-text">Информация о проекте</p>
-          </li>
-          <li class="questions__list-item">
-            <svg class="questions__icon">
-              <use xlink:href="#building-icon"></use>
-            </svg>
-            <p class="questions__list-text">Обучение</p>
-          </li>
-          <li class="questions__list-item">
-            <svg class="questions__icon">
-              <use xlink:href="#contract-icon"></use>
-            </svg>
-            <p class="questions__list-text">Трудоустройство</p>
-          </li>
-          <li class="questions__list-item">
-            <svg class="questions__icon">
-              <use xlink:href="#hands-icon"></use>
-            </svg>
-            <p class="questions__list-text">Сотрудничество</p>
-          </li>
-        </ul>
+        <div class="slider">
+          <ul class="questions__list">
+            <li class="questions__list-item questions__list-item_active">
+              <svg class="questions__icon">
+                <use xlink:href="#document-icon"></use>
+              </svg>
+              <p class="questions__list-text">Подача заявки</p>
+            </li>
+            <li class="questions__list-item">
+              <svg class="questions__icon">
+                <use xlink:href="#people-icon"></use>
+              </svg>
+              <p class="questions__list-text">Требования к участникам</p>
+            </li>
+            <li class="questions__list-item">
+              <svg class="questions__icon">
+                <use xlink:href="#info-icon"></use>
+              </svg>
+              <p class="questions__list-text">Информация о проекте</p>
+            </li>
+            <li class="questions__list-item">
+              <svg class="questions__icon">
+                <use xlink:href="#building-icon"></use>
+              </svg>
+              <p class="questions__list-text">Обучение</p>
+            </li>
+            <li class="questions__list-item">
+              <svg class="questions__icon">
+                <use xlink:href="#contract-icon"></use>
+              </svg>
+              <p class="questions__list-text">Трудоустройство</p>
+            </li>
+            <li class="questions__list-item">
+              <svg class="questions__icon">
+                <use xlink:href="#hands-icon"></use>
+              </svg>
+              <p class="questions__list-text">Сотрудничество</p>
+            </li>
+          </ul>
+        </div>
         <article class="questions-info">
           <h3 class="questions__subtitle">Подача заявки</h3>
           <ul class="questions-info__list">
