feat: add show/hide answers

--- a/src/index.html
+++ b/src/index.html
@@ -24,29 +24,27 @@
           <li class="steps__list-item">
             <span class="steps__number">2</span>
             <p class="steps__text">
-              Зарегистрируйтесь в Личном кабинете гражданина и загрузите в него документы в течение
-              3 дней после подтверждения заявки
+              Зарегистрируйтесь в Личном кабинете гражданина и загрузите в него документы в течение 3 дней после
+              подтверждения заявки
             </p>
           </li>
           <li class="steps__list-item">
             <span class="steps__number">3</span>
             <p class="steps__text">
-              Подайте документы, подтверждающие категорию участника, в Центр занятости населения в
-              течение 3 рабочих дней после подтверждения заявки
+              Подайте документы, подтверждающие категорию участника, в Центр занятости населения в течение 3 рабочих
+              дней после подтверждения заявки
             </p>
           </li>
           <li class="steps__list-item">
             <span class="steps__number">4</span>
             <p class="steps__text">
-              Выберите один из двух типов договора и желаемую дату обучения. Успейте в ближайшие
-              потоки: 16 и 23 мая
+              Выберите один из двух типов договора и желаемую дату обучения. Успейте в ближайшие потоки: 16 и 23 мая
             </p>
           </li>
           <li class="steps__list-item">
             <span class="steps__number">5</span>
             <p class="steps__text">
-              Отправьте оригинал договора в образовательную организацию до стартаобразовательных
-              групп
+              Отправьте оригинал договора в образовательную организацию до стартаобразовательных групп
             </p>
           </li>
         </ul>
@@ -101,57 +99,53 @@
           <ul class="questions-info__list">
             <li class="questions-info__list-item">
               <h4 class="questions-info__title">Как подтвердить заявку на участие в Проекте?</h4>
-              <svg class="questions-info__icon">
-                <use xlink:href="#arrow-icon"></use>
-              </svg>
+              <button
+                class="questions-info__button"
+                aria-label="show answer"
+                name="questions-info-button"></button>
               <div class="questions-info__text">
                 <ul class="questions-info__sublist">
                   <li class="questions-info__sublist-item">
-                    После того, как вы заполните анкету на нашем сайте, ваш браузер автоматически
-                    откроет сайт «Работа в России» или же ссылка придет на почту, которую вы указали
-                    в заявке
+                    После того, как вы заполните анкету на нашем сайте, ваш браузер автоматически откроет сайт «Работа в
+                    России» или же ссылка придет на почту, которую вы указали в заявке
                   </li>
                   <li class="questions-info__sublist-item">
-                    Чтобы подтвердить свою личность и заявку на выбранную программу, вам нужно
-                    авторизоваться на сайте «Работа в России». Вход осуществляется через вашу
-                    учетную запись на портале Госуслуг. Вам необходимо иметь статус «Подтвержденной»
-                    учетной записи. Здесь вы можете посмотреть подробную инструкцию
+                    Чтобы подтвердить свою личность и заявку на выбранную программу, вам нужно авторизоваться на сайте
+                    «Работа в России». Вход осуществляется через вашу учетную запись на портале Госуслуг. Вам необходимо
+                    иметь статус «Подтвержденной» учетной записи. Здесь вы можете посмотреть подробную инструкцию
                   </li>
                 </ul>
               </div>
             </li>
             <li class="questions-info__list-item">
               <h4 class="questions-info__title">Сколько по времени ждать ответа на заявку?</h4>
-              <svg class="questions-info__icon">
-                <use xlink:href="#arrow-icon"></use>
-              </svg>
+              <button
+                class="questions-info__button"
+                aria-label="show answer"
+                name="questions-info-button"></button>
+              <div class="questions-info__text">Максимальный срок ответа на заявку — 15 рабочих дней.</div>
+            </li>
+            <li class="questions-info__list-item">
+              <h4 class="questions-info__title">Не могу отправить заявку на портале «Работа в России». Что делать?</h4>
+              <button
+                class="questions-info__button"
+                aria-label="show answer"
+                name="questions-info-button"></button>
               <div class="questions-info__text">
-                Максимальный срок ответа на заявку — 15 рабочих дней.
+                К сожалению, на портале «Работа в России» иногда происходят технические неполадки. Мы не можем на это
+                повлиять, попробуйте подтвердить заявку через некоторое время.
               </div>
             </li>
             <li class="questions-info__list-item">
-              <h4 class="questions-info__title">
-                Не могу отправить заявку на портале «Работа в России». Что делать?
-              </h4>
-              <svg class="questions-info__icon">
-                <use xlink:href="#arrow-icon"></use>
-              </svg>
+              <h4 class="questions-info__title">Не могу дозвониться по телефону, указанному на сайте. Что делать?</h4>
+              <button
+                class="questions-info__button"
+                aria-label="show answer"
+                name="questions-info-button"></button>
               <div class="questions-info__text">
-                К сожалению, на портале «Работа в России» иногда происходят технические неполадки.
-                Мы не можем на это повлиять, попробуйте подтвердить заявку через некоторое время.
-              </div>
-            </li>
-            <li class="questions-info__list-item">
-              <h4 class="questions-info__title">
-                Не могу дозвониться по телефону, указанному на сайте. Что делать?
-              </h4>
-              <svg class="questions-info__icon">
-                <use xlink:href="#arrow-icon"></use>
-              </svg>
-              <div class="questions-info__text">
-                В данный момент у нас большая нагрузка на телефон горячей линии, поэтому не все
-                могут получить ответ по телефону. Если у вас не получилось дозвониться, вы всегда
-                можете написать интересующий вопрос нам на почту —
+                В данный момент у нас большая нагрузка на телефон горячей линии, поэтому не все могут получить ответ по
+                телефону. Если у вас не получилось дозвониться, вы всегда можете написать интересующий вопрос нам на
+                почту —
                 <a
                   href="mailto:info@tgu-dpo.ru"
                   class="questions__link"
